--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -20,7 +20,7 @@
 
         <style>
             #map {
-                height: 180px; 
+                height: 500px; 
             }
         </style>
     </head>
@@ -36,7 +36,8 @@
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
-        <script type="text/javascript" src="lib/quickstartTutorial.js"></script>
+        
+        <script type="text/javascript" src="lib/geojsonTutorial.js"></script>
         <script type=" text/javascript" src="js/main.js"></script>
         
     </body>
