--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -37,7 +37,8 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
         
-        <script type="text/javascript" src="lib/geojsonTutorial.js"></script>
+        <script type="text/javascript" src="js/adaptedTutorial.js"></script>
+
         <script type=" text/javascript" src="js/main.js"></script>
         
     </body>
