updated geojson file
to reflect date correction 2013-2019 rather than the other way

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -7,6 +7,7 @@
 
         <!--put your external stylesheet links here-->
         <link rel="stylesheet" href="lib/leaflet.css">
+        <link rel=" stylesheet" href = "css/style.css">
         <link rel = "stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
         crossorigin=""/>
@@ -16,7 +17,7 @@
 
          <!--you can also place internal styles here;
              place these within <style> tags-->
-        <div id = "map"></div>
+        
 
         <style>
             #map {
@@ -27,7 +28,8 @@
 
     <body>
         <!--put your initial page content here-->
-       
+        <div id = "map"></div>
+        <div id = "panel"></div>
 
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
